src/snapshots/ruuvi_decoders__v5__tests__maximum.snap
---
source: src/v5.rs
expression: res
---
DataFormatV5 {
    mac_address: "cbb8334c884f",
    temperature: Some(
        163.835,
    ),
    humidity: Some(
        163.835,
    ),
    pressure: Some(
        115534.0,
    ),
    acceleration_x: Some(
        32767,
    ),
    acceleration_y: Some(
        32767,
    ),
    acceleration_z: Some(
        32767,
    ),
    battery_voltage: Some(
        3646,
    ),
    tx_power: Some(
        20,
    ),
    movement_counter: Some(
        254,
    ),
    measurement_sequence: Some(
        65534,
    ),
}
